added comments for full code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- our whole calculator container  -->
+
     <div class="container">
+
+        <!-- display data section included CALCULATOR Heading at TOP  -->
+
         <div class="displaydata">
             <h1>CALCULATOR</h1>
             <div id="dataContainer">
@@ -15,6 +21,9 @@
             </div>
 
         </div>
+
+        <!-- calculator Button Section  -->
+
         <div class="buttonContainer">
             <button >1</button>
             <button >2</button>
@@ -43,6 +52,8 @@
         </div>
 
     </div>
+
+    <!-- js script for our calculator  -->
 
     <script src="script.js"></script>
 </body>
